# multimodal-As-ML

./: .gitignore  docker-compose.yml  multimodal-As-ML
img-to-text/: example.py
lumina/: Dockerfile  pyproject.toml
lumina/lumina/: __main__.py  cfg.py  logginig.py  path.py  utils.py
lumina/lumina/chat_models/: llama.py  model_abc.py
lumina/lumina/chat_models/tokenizers/: BPE.py  __init__.py  tokenizer.py
lumina/lumina/database/: __init__.py  document_storage.py  schemas.py  utils.py
lumina/lumina/database/clients/: meilisearch.py  mongodb.py
lumina/lumina/iner_types/: __init__.py  t_types.py
lumina/lumina/iner_types/schemas/: message.py  metadata.py
lumina/lumina/modules/llumina/: chat.py
lumina/lumina/modules/llumina/context/: __init__.py  connectome.py  manager.py
lumina/lumina/modules/pc_acsess/: commands.py  parser.py
lumina/lumina/prompts/: make-history.txt  start.txt
lumina_worckspace/: main.txt
manager/context/: __init__.py  abc_layer.py  text_img.py
textimg_to_text/: main.py
